Add deployment guide to README.md